# model/category.model.go
@@ -1,11 +1,17 @@
 package model
 
-import "gorm.io/gorm"
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
 
 type Category struct {
-	*gorm.Model
-	Name     string `gorm:"type:varchar(100)"`
-	Projects []Projects
+	ID        uuid.UUID  `json:"id"`
+	Name      string     `json:"name"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
+	DeletedAt *time.Time `json:"deleted_at,omitempty"`
 }
 
 type CategoryCreateRequest struct {
